--- a/index.html
+++ b/index.html
@@ -125,9 +125,11 @@
             try{
                 const startTime = performance.now();
 
-                const response = await fetch('http://speedtest.tele2.net/100MB.zip', { method: "GET", mode: 'no-cors' }); // Replace with a valid test file URL
+                const response = await fetch('https://cors-anywhere.herokuapp.com/https://d396qusza40orc.cloudfront.net/getdata%2Fdata%2Fss06hid.csv', { method: "GET", mode: 'no-cors' }); // Replace with a valid test file URL
                 if(!response.ok){
-                    throw new Error(`Response status: ${response.status}`);
+                    //if(response.status != 0){
+                        throw new Error(`Response status: ${response.status}`);
+                    //}
                 }
 
                 const blob = await response.blob(); // Get the file size
@@ -167,7 +169,7 @@
             const uploadDisplay = document.getElementById('upload-value');
             const downloadDisplay = document.getElementById('download-value');
 
-            while (liveSpeedUpdates && time < 5) { // Run the test for 5 seconds
+            while (liveSpeedUpdates && time < 15) { // Run the test for 5 seconds
                 const uploadSpeed = await measureUploadSpeed(); // Measure upload speed
                 const downloadSpeed = await measureDownloadSpeed(); // Measure download speed
 
@@ -206,7 +208,7 @@
             if (url != "") {
                 let timeElapsed = 0;
 
-                while (livePingUpdates && timeElapsed < 5) {
+                while (livePingUpdates && timeElapsed < 15) {
                     try {
                         var startTime = performance.now();
 
